--- a/MYFEEWEB/Views/Student/Index.cshtml
+++ b/MYFEEWEB/Views/Student/Index.cshtml
@@ -116,6 +116,12 @@
                                             <button class="btn btn-info btn-lg btn-block" type="button" onclick="window.location.href='@Url.Action("Registration","Student")'">Signup</button>
                                         </div>
                                     </div>
+                                
+                                  <div class="form-group">
+                                        <div class="col-md-12">
+                                            <button class="btn btn-info btn-lg btn-block" type="button" onclick="window.location.href='@Url.Action("Registration","Student")'">Signup1</button>
+                                        </div>
+                                    </div>
 
                                 }
                             </div>
